# Evaluation-of-low-cost-SLAM-devices

./: CMakeLists.txt  EnclosedAreaCount.py  Proportion_of_Map_Certainty.py  Proportion_of_Map_Certainty_original.py  README.md  config_2d.launch  config_gmapping.launch  demo_2d.launch  demo_2d_original.launch  imu_strip_slash.py  kobuki.launch  kobuki_vlp.urdf.xacro  package.xml  pi_updateclock.sh  sensors.launch  turtlebot_cartographer.launch  turtlebot_cartographer2.launch  turtlebot_gmapping.launch  update_clock.sh
